--- a/example/src/css/style.scss
+++ b/example/src/css/style.scss
@@ -22,7 +22,7 @@ article {
 pre {
   margin: 1.5em 0;
   padding: 1em;
-  width: 100%;
+  // width: 100%;
   max-height: 300px;
   overflow: auto;
 
